<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <androidx.cardview.widget.CardView
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:cardCornerRadius="100dp"
        android:elevation="10dp">

        <ImageView
            android:id="@+id/menuIconUser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/nav_header_desc"
            app:srcCompat="@drawable/ic_icon_for_person_white" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:fontFamily="@font/colus_regular"
        android:text="@string/user_anonymous"
        android:textSize="20sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_anonymous_email"
        android:fontFamily="@font/rubik_regular"
        android:textSize="16sp"/>
</LinearLayout>